# fastapi-monolith-application

./: .dockerignore  Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml
src/application/: application.py  asgi.py  containers.py  database.py  endpoints.py  models.py  repositories.py  services.py
src/worker/: application.py  containers.py  redis.py  services.py
tests/application/: test_application.py  test_containers.py  test_users.py
tests/worker/: test_worker.py
